fix: remove redundant type parameter and use Input element

--- a/docs/how-to-guides/webiny-applications/page-builder/extend-page-settings.mdx
+++ b/docs/how-to-guides/webiny-applications/page-builder/extend-page-settings.mdx
@@ -71,13 +71,13 @@ import { gql } from "graphql-tag";
 import { AddQuerySelectionPlugin } from "@webiny/app/plugins/AddQuerySelectionPlugin";
 import { UIViewPlugin } from "@webiny/app-admin/ui/UIView";
 import { GeneralSettingsView } from "@webiny/app-page-builder/editor/ui/views/GeneralSettingsView";
-import { PasswordElement } from "@webiny/app-admin/ui/elements/form/PasswordElement";
+import { InputElement } from "@webiny/app-admin/ui/elements/form/InputElement";
 
 export default [
   // Add an input field for the password
-  new UIViewPlugin<GeneralSettingsView>(GeneralSettingsView, view => {
+  new UIViewPlugin(GeneralSettingsView, view => {
     view.addField(
-      new PasswordElement("password", {
+      new InputElement("password", {
         name: "settings.general.password",
         label: "Password",
         description: "If set, the page will be protected by this password on the frontend."
