docs: Updated the stack command to show resource ID as well Thanks: Pavel Denisjuk for the inputs.

--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -78,13 +78,13 @@ Note that when deploying a specific project application, the environment (`--env
 ## List AWS Resources
 To list all cloud infrastructure resources deployed as part of a particular project application, you can run the following command:
 ```bash
-yarn webiny pulumi {folder} --env {env} -- stack
+yarn webiny pulumi {folder} --env {env} -- stack --show-ids
 ```
 
 For example, to list all cloud infrastructure resources deployed as part of the **API** project
 application, deployed into the `dev` environment, you can run the following command:
 ```bash
-yarn webiny pulumi api --env dev -- stack
+yarn webiny pulumi api --env dev -- stack --show-ids
 ```
 
 Running the above command should produce the following output:
@@ -104,8 +104,8 @@ Similarly, you can use the following commands to list all cloud infrastructure r
 deployed as part of the **Admin Area** and **Website** project applications, into the `dev` environment:
 
 ```bash
-yarn webiny pulumi apps/admin --env dev -- stack
-yarn webiny pulumi apps/website --env dev -- stack
+yarn webiny pulumi apps/admin --env dev -- stack --show-ids
+yarn webiny pulumi apps/website --env dev -- stack --show-ids
 ```
 
 :::info
