fix: update doc as per feedback

--- a/docs/how-to-guides/development/environment-variables.mdx
+++ b/docs/how-to-guides/development/environment-variables.mdx
@@ -231,7 +231,7 @@ Like we've seen in the backend development section, you can also assign environm
 
 In CI/CD workflows, again, you're encouraged to adapt built-in methods for working with environment variables, that are offered by your CI/CD provider.
 
-## DEBUG Environment Variable
+## `DEBUG` Environment Variable
 
 In order to provide the best possible debugging experience, and at the same time, maintain a strong security posture, Webiny uses the `DEBUG` environment variable to determine what information needs to be revealed in case one or more errors were thrown in the application runtime.
 
@@ -272,9 +272,9 @@ You must redeploy your backend project application after updating the environmen
 :::
 
 ### Visual Feedback
-The DEBUG environment variable can also be used within your frontend (React) applications.
+The `DEBUG` environment variable can also be used within your frontend (React) applications.
 
-If set to `true`, all errors detected in the application runtime will be presented in a clear error report, with all the relevant information like error message, and a complete stack trace:
+If set to `true`, all errors detected in the application runtime will be presented within a clear error report, with all of the relevant information like the error message and a complete stack trace:
 
 <!-- vale off -->
 
@@ -286,10 +286,7 @@ If set to `true`, all errors detected in the application runtime will be present
 
 <!-- vale on -->
 
-We set it by default when you [start](https://github.com/webiny/webiny-js/blob/next/packages/project-utils/bundling/app/index.js#L33) the Admin app locally.
-But, you can always do the same for other environments like `dev` for example.
-
-The DEBUG environment variable can be set via the application's `webiny.config.ts` config file, for example, [`apps/admin/code/webiny.config.ts`](https://github.com/webiny/webiny-js/blob/next/apps/admin/code/webiny.config.ts) or [`apps/website/code/webiny.config.ts`](https://github.com/webiny/webiny-js/blob/next/apps/website/code/webiny.config.ts), for example:
+The `DEBUG` environment variable can be set via the application's `webiny.config.ts` config file, for example, [`apps/admin/code/webiny.config.ts`](https://github.com/webiny/webiny-js/blob/next/apps/admin/code/webiny.config.ts) or [`apps/website/code/webiny.config.ts`](https://github.com/webiny/webiny-js/blob/next/apps/website/code/webiny.config.ts):
 
 ```ts
 // Make sure to use the `REACT_APP_` prefix
@@ -312,8 +309,9 @@ The following commands load the `.env` file: [`deploy`](/docs/how-to-guides/depl
 
 #### Can I use the DEBUG variable while developing custom applications?
 
-Yes.
+Yes, you can too use the `DEBUG` environment variable to determine what information you want to reveal in case of application runtime errors.
 
-#### Do I have to always `REACT_APP_` prefix when defining frontend environment variables?
+#### Is the `REACT_APP_` prefix necessary when naming frontend environment variables?
 
-Yes, you must create custom environment variables beginning with `REACT_APP_` to avoid accidentally exposing a private key on the machine that could have the same name.
+Yes, for frontend applications, the names of environment variables must always be prefixed with the `REACT_APP_` prefix.
+This is mainly because of the [Create React App](https://create-react-app.dev/docs/adding-custom-environment-variables/), which is being utilized as a frontend application development tool.
