--- a/docs/how-to-guides/webiny-applications/page-builder/extend-page-settings.mdx
+++ b/docs/how-to-guides/webiny-applications/page-builder/extend-page-settings.mdx
@@ -7,6 +7,7 @@ description: Learn how to extend page settings with new fields
 ---
 
 import CenteredImage from "@components/CenteredImage";
+import settingsView from "./extend-page-settings/settingsView.png";
 import updatedSchema from "./extend-page-settings/schema.png";
 import passwordField from "./extend-page-settings/passwordField.png";
 import websitePassword from "./extend-page-settings/websitePassword.png";
@@ -20,9 +21,13 @@ import websitePassword from "./extend-page-settings/websitePassword.png";
 
 ## Overview
 
-Page settings UI within the Webiny Page Builder, by default, offers 3 major sections: `General settings`, `Social media`, and `SEO settings`. These 3 sections are represented by the underlying view classes, implemented using the [Webiny UI Composer](/docs/key-topics/ui-composer/introduction):
+Page settings UI within the Webiny Page Builder, by default, contains 3 major sections: **General settings**, **Social media**, and **SEO settings**.
 
-Adding new fields to the page settings involves the following steps:
+<CenteredImage src={settingsView} title={"Page Settings View"} />
+
+These 3 sections are represented by the underlying view classes, implemented using the [Webiny UI Composer](/docs/key-topics/ui-composer/introduction).
+
+Adding a new field to the page settings involves the following steps:
 
 1. Extend the GraphQL API to be able to handle the new field.
 2. Add a form field to the UI to represent the value from the GraphQL API.
@@ -32,29 +37,55 @@ In this example, we'll add a `password` field to the `General Settings`.
 
 ## Add a New Settings Field to GraphQL API
 
-Each object in the GraphQL is represented by its own GraphQL type. In case of general settings, these types are `PbGeneralPageSettings` for queries, and `PbGeneralPageSettingsInput` for mutations. The following plugin adds our new `password` field to both of these types:
+We need to extend the following GraphQL types: `PbGeneralPageSettings` for queries, and `PbGeneralPageSettingsInput` for mutations.
+
+But GraphQL is just a router, and page settings have some strict validation rules, so extending a GraphQL type is not enough to push the data into the database. We need to manually grab the input value and assign it to the page settings data.
+
+The following code takes care of all the things described above.
 
 ```ts title="api/code/graphql/src/plugins/pageSettings.ts"
 import { GraphQLSchemaPlugin } from "@webiny/handler-graphql/plugins";
+import { PagePlugin } from "@webiny/api-page-builder/plugins/PagePlugin";
+import { Page } from "@webiny/api-page-builder/types";
 
-export default new GraphQLSchemaPlugin({
-  typeDefs: /* GraphQL */ `
-    extend type PbGeneralPageSettings {
-      password: String
-    }
+// We need this interface for the PagePlugin below.
+// It will enable you to have proper autocomplete on your new fields.
+interface PageWithPassword extends Page {
+  settings: Page["settings"] & {
+    general: Page["settings"]["general"] & {
+      password: string;
+    };
+  };
+}
 
-    extend input PbGeneralPageSettingsInput {
-      password: String
+export default [
+  // Add `password` to the page settings types
+  new GraphQLSchemaPlugin({
+    typeDefs: /* GraphQL */ `
+      extend type PbGeneralPageSettings {
+        password: String
+      }
+
+      extend input PbGeneralPageSettingsInput {
+        password: String
+      }
+    `
+  }),
+  // Explicitly assign the field value from GraphQL input to the data that is used to update the page.
+  // Note that we are passing a custom type to the plugin to allow us to use the new `password` field.
+  new PagePlugin<PageWithPassword>({
+    beforeUpdate({ inputData, updateData }) {
+      updateData.settings.general.password = inputData.settings.general.password;
     }
-  `
-});
+  })
+];
 ```
 
 :::info
 The code above can be placed in the `api/code/graphql/src/plugins/pageSettings.ts` file, which doesn't exist by default, so you will have to create it manually. Furthermore, once the file is created, make sure that it's actually imported and registered in the `api/code/graphql/src/index.ts` entrypoint file.
 :::
 
-With this plugin, once you redeploy the API, your GraphQL schema will contain the new `password` field:
+With this plugin, once you redeploy the API project application, your GraphQL schema will contain the new `password` field:
 
 <CenteredImage
   src={updatedSchema}
@@ -62,9 +93,15 @@ With this plugin, once you redeploy the API, your GraphQL schema will contain th
   style={{ width: 636 }}
 />
 
+:::tip
+
+Use the [`webiny watch`](/docs/how-to-guides/webiny-cli/use-watch-command) command to continuously deploy application code changes into the cloud and instantly see them in action. For quick (manual) testing, you can use the built-in [API Playground](/docs/how-to-guides/webiny-applications/admin-area/api-playground/).
+
+:::
+
 ## Add a Form Field to the UI
 
-The view class responsible for the general settings is the `GeneralSettingsView` class. To modify it, we need to hook into it using the `UIViewPlugin`. We also need to add the new field to the GraphQL query that loads page data.
+The view class responsible for the general settings is the `GeneralSettingsView` class. To modify it, we need to hook into it using the `UIViewPlugin` plugin. We also need to add the new field to the `PbGetPage` GraphQL query operation, which loads the page data.
 
 ```tsx title="apps/admin/code/src/plugins/pageSettings.ts"
 import { gql } from "graphql-tag";
@@ -101,19 +138,19 @@ export default [
 ];
 ```
 
-After your app rebuilds, the new field will be rendered in the settings view. Using this technique, you can add as many fields as you need. You can also hook into other page settings views, using their corresponding classes: `SocialSettingsView` and `SEOSettingsView`.
+After your application rebuilds, the new field will be rendered in the settings view. Using this technique, you can add as many fields as you need. You can also hook into other page settings views, using their corresponding classes: `SocialSettingsView` and `SEOSettingsView`.
 
 <CenteredImage src={passwordField} title={"Password Field Added to the General Settings View"} />
 
 For the Admin Area, the work is done. You can now get and update the value of that new `password` field.
 
-## Add the New Query Selection in the Website App
+## Add the New Query Selection in the Website Application
 
 :::note
 This step is optional. If you're writing custom queries and are executing the GraphQL API calls yourself, you can skip this step.
 :::
 
-Website app doesn't know about the plugin we added in the Admin Area app. By default, it will not include the `password` field in the GraphQL query. If you want this field to be automatically queried with the rest of the page data, you need to add a plugin, just like in the Admin Area app.
+Website application doesn't know about the plugin we've added in the Admin Area application. If you want this new field to be automatically queried with the rest of the page data, you need to add a plugin, just like in the Admin Area app.
 
 ```ts title="apps/website/code/src/plugins/pageSettings.ts"
 import { gql } from "graphql-tag";
@@ -138,6 +175,6 @@ export default new AddQuerySelectionPlugin({
 The code above can be placed in the `apps/website/code/src/plugins/pageSettings.ts` file, which doesn't exist by default, so you will have to create it manually. Furthermore, once the file is created, make sure that it's actually imported and registered in the `apps/website/code/src/plugins/index.ts` entrypoint file.
 :::
 
-Once the `website` app is rebuilt, it will contain the `password` field in the `PbGetPublishedPage` operation response:
+Once the application is rebuilt, the `password` field will be included in all `PbGetPublishedPage` GraphQL query operations:
 
 <CenteredImage src={websitePassword} title={"Password Is Now Returned from the API"} />
