fix: improve code example

--- a/docs/how-to-guides/webiny-applications/page-builder/extend-page-settings.mdx
+++ b/docs/how-to-guides/webiny-applications/page-builder/extend-page-settings.mdx
@@ -75,7 +75,11 @@ export default [
   // Note that we are passing a custom type to the plugin to allow us to use the new `password` field.
   new PagePlugin<PageWithPassword>({
     beforeUpdate({ inputData, updateData }) {
-      updateData.settings.general.password = inputData.settings.general.password;
+      // Make sure `general` settings exist before assigning a value to it.
+      // There are situations where this may be empty, for example, during system installation.
+      if (updateData.settings.general) {
+        updateData.settings.general.password = inputData.settings.general.password;
+      }
     }
   })
 ];
