chore: add a note about 5.11.1

--- a/docs/changelog/v5.12.0.mdx
+++ b/docs/changelog/v5.12.0.mdx
@@ -12,6 +12,8 @@ This document highlights the most important fixes, improvements, and features, t
 
 :::info How To Upgrade?
 
+Make sure you didn't miss the **[5.11.1](/docs/changelog/5.11.1)** release, which was an urgent security hotfix! You **must** apply that upgrade before moving on to **5.12.0**. 
+
 Please check the [Webiny 5.12.0 migration guide](/docs/how-to-guides/upgrade-webiny/5.11.1-to-5.12.0) for the upgrade steps.
 
 :::
@@ -57,6 +59,8 @@ class MyView extends UIView {
 ```
 
 For Webiny, this is the only way forward to give you a _truly_ customizable platform. With this release, several parts of Admin Area app are already implemented with the UI Composer: the main admin layout, header, navigation sidebar, page editor settings and users form. There are plenty of views to rewrite to make the whole Admin Area customizable, and we'll prepare issues on Github that you, the community, can help us tackle.
+
+Scaffolds are backwards compatible, so you can continue using them. But in the future we will update them to use the UI Composer as well, as soon as we have all the UI elements for the Admin Area app ready.
 
 To learn more about the UI Composer, please visit the [official documentation](/docs/key-topics/ui-composer/introduction).
 
