feat: add link to Date object docs

--- a/docs/how-to-guides/webiny-applications/page-builder/extend-page-settings.mdx
+++ b/docs/how-to-guides/webiny-applications/page-builder/extend-page-settings.mdx
@@ -186,7 +186,7 @@ Once the application is rebuilt, the `password` field will be included in all `P
 ## Handling DateTime Fields
 
 GraphQL `DateTime` type has a little peculiarity you should be aware of, to avoid unnecessary debugging.
-When you add a `DateTime` scalar to your GraphQL Schema, and perform a mutation, that `DateTime` field will be converted to JS **Date** object during input validation (performed by GraphQL Schema), and it will be passed as such to the resolver.
+When you add a `DateTime` scalar to your GraphQL Schema, and perform a mutation, that `DateTime` field will be converted to a [Date](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date) object during input validation (performed by GraphQL Schema), and it will be passed as such to the resolver.
 
 It's the default behaviour of the `DateTime` scalar, from the [graphql-scalars](https://www.npmjs.com/package/graphql-scalars) library, which Webiny uses.
 
