--- a/docs/how-to-guides/webiny-applications/file-manager/create-a-file-type-plugin.mdx
+++ b/docs/how-to-guides/webiny-applications/file-manager/create-a-file-type-plugin.mdx
@@ -34,13 +34,14 @@ In this guide, we go through ways of implementing your own renderers for file ty
 
 ## Using the Built-In Plugin
 
-The easiest way is to use the built-in `FileManagerFileTypePlugin` class. Let's configure a plugin that will render files of type `video/mp4`:
+The easiest way is to use the built-in `FileManagerFileTypePlugin` class. Create the plugin inside of the
+/apps/admin/code/src/plugins/ folder, and register it in the apps/admin/code/src/plugins/base.ts entrypoint file. Let's configure a plugin that will render files of type `video/mp4`:
 
 ```tsx title="Custom renderer for video/mp4 files"
-import { plugins } from "@webiny/plugins";
+import React from "react";
 import { FileManagerFileTypePlugin } from "@webiny/app-admin/plugins/FileManagerFileTypePlugin";
 
-plugins.register(
+export default [
   new FileManagerFileTypePlugin({
     types: ["video/mp4"],
     render({ file }) {
@@ -55,8 +56,13 @@ plugins.register(
       );
     }
   })
-);
+];
 ```
+
+:::info
+The code above can be placed in the [`/apps/admin/code/src/plugins/mp4Plugin.tsx`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/mp4Plugin.tsx) file, which doesn't exist by default, so you will have to create it manually. Furthermore, once the file is created, make sure that it's actually imported and registered in the [`apps/admin/code/src/plugins/index.ts`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/index.ts) entrypoint file.
+:::
+
 
 Now your File Manager will display files like this:
 
