docs: remove repeated information

--- a/docs/how-to-guides/webiny-applications/file-manager/create-a-file-type-plugin.mdx
+++ b/docs/how-to-guides/webiny-applications/file-manager/create-a-file-type-plugin.mdx
@@ -34,8 +34,7 @@ In this guide, we go through ways of implementing your own renderers for file ty
 
 ## Using the Built-In Plugin
 
-The easiest way is to use the built-in `FileManagerFileTypePlugin` class. Create the plugin inside of the
-/apps/admin/code/src/plugins/ folder, and register it in the apps/admin/code/src/plugins/base.ts entrypoint file. Let's configure a plugin that will render files of type `video/mp4`:
+The easiest way is to use the built-in `FileManagerFileTypePlugin` class. Let's configure a plugin that will render files of type `video/mp4`:
 
 ```tsx title="Custom renderer for video/mp4 files"
 import React from "react";
