fix: spelling mistake

--- a/docs/tutorials/extend-admin-area/extending-entities.mdx
+++ b/docs/tutorials/extend-admin-area/extending-entities.mdx
@@ -162,7 +162,7 @@ Once we've updated the [`CarManufacturersForm`](https://github.com/webiny/webiny
 
 <CenteredImage alt="Updated Car Manufacturers Form" src={formUpdated} />
 
-Finally, we need to add the `isPopular` field to all relevant GraphQL query and mutation operations. This ensures that we're both sending and receiving the `isPopulate` value while interacting with the GraphQL API.
+Finally, we need to add the `isPopular` field to all relevant GraphQL query and mutation operations. This ensures that we're both sending and receiving the `isPopular` value while interacting with the GraphQL API.
 
 Adding the `isPopular` field can be easily done by updating the [`CAR_MANUFACTURER_FIELDS_FRAGMENT`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/hooks/graphql.ts#L3) GraphQL fragment, located in the [`graphql.ts`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/apps/admin/code/src/plugins/scaffolds/carManufacturers/views/hooks/graphql.ts#L3) file:
 
